--- a/inputs/openstack.yaml
+++ b/inputs/openstack.yaml
@@ -1,3 +1,3 @@
-image: fc8c71db-aa9d-4ba0-81c3-5d205b2604a3
-flavor: b122c607-2b5b-43fd-8879-cf6cb742e102
-agent_user: ubuntu
+image: ''
+flavor: ''
+agent_user: ''
